# APA

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  verify_import.py
.agent/rules/: apa.md
.agent/workflows/: check-architecture.md
.github/workflows/: beta-release.yml  ci.yml
scripts/: run_gui.sh  verify_lossless.py
src/apa_formatter/: __init__.py  bootstrap.py  cli.py  clipboard.py  error_messages.py  persistence.py
src/apa_formatter/adapters/: __init__.py  base.py  docx_adapter.py  pdf_adapter.py
src/apa_formatter/application/: __init__.py  error_messages.py
src/apa_formatter/application/dto/: __init__.py  config_dto.py
src/apa_formatter/application/use_cases/: __init__.py  check_compliance.py  convert_document.py  copy_reference.py  create_document.py  fetch_metadata.py  generate_demo.py  manage_references.py  smart_export.py
src/apa_formatter/automation/: __init__.py  base.py  pipeline.py
src/apa_formatter/automation/fixers/: __init__.py  character_fixer.py  citation_fixer.py  heading_detector.py  paragraph_fixer.py  reference_list_fixer.py  whitespace_fixer.py
src/apa_formatter/citations/: __init__.py
src/apa_formatter/config/: __init__.py  apa7_default.json  loader.py  models.py  sena_default.json
src/apa_formatter/converters/: __init__.py  extractor.py
src/apa_formatter/domain/: __init__.py  errors.py
src/apa_formatter/domain/models/: __init__.py  (+5 more)
src/apa_formatter/fetchers/: __init__.py  doi_fetcher.py  isbn_fetcher.py  url_fetcher.py
src/apa_formatter/gui/: __init__.py  app.py  main_window.py  theme.py
src/apa_formatter/importers/: __init__.py  semantic_importer.py  structure_analyzer.py
src/apa_formatter/infrastructure/: __init__.py
src/apa_formatter/locale/: __init__.py  en.json  es.json
src/apa_formatter/models/: __init__.py  ai_schemas.py  document.py  enums.py  reference_manager.py  semantic_document.py
src/apa_formatter/presentation/: __init__.py
src/apa_formatter/rules/: __init__.py  constants.py
src/apa_formatter/validators/: __init__.py  checker.py  export_validator.py
tests/: test_adapters.py  test_ai_corrector.py  test_auto_pipeline.py  test_checker_converter.py  test_config.py  test_document_analyzer.py  test_edge_cases.py  test_export_validator.py  test_fetchers.py  test_gemini_integration.py  test_gui.py  test_i18n.py  test_main_window_integration.py  test_models.py  test_pdf_importer.py  test_persistence.py  test_reference_formats.py  test_reference_manager.py  test_rules.py  test_semantic_importer.py  test_settings.py  test_smart_parser.py
(+63 files in other folders)
