[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apa-formatter"
version = "0.1.0"
description = "Formateador de documentos Word y PDF conforme a normas APA 7ª edición"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "mackroph" }]

dependencies = [
    "python-docx>=1.1.0",
    "fpdf2>=2.8.0",
    "typer[all]>=0.12.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "PySide6>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
apa = "apa_formatter.cli:app"
apa-gui = "apa_formatter.gui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/apa_formatter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
